cmake_minimum_required(VERSION 3.0)
project(unpp2)

include_directories(${PROJECT_SOURCE_DIR}/include)
add_library(utils SHARED ${PROJECT_SOURCE_DIR}/src/utils.c)

link_libraries(utils)
add_subdirectory(ch4)
if (${CMAKE_SYSTEM_NAME} EQUAL "Linux")
message("on linux, building message queue programs")
add_subdirectory(ch5)
else()
message("on macos, not building message queue programs")
endif()
add_subdirectory(ch7)
add_subdirectory(ch8)
add_subdirectory(ch9)
add_subdirectory(ch10)
